@@ -1,3 +1,7 @@
+2014-12-19  Smacky
+
+	* Make licence install automatically.
+
 2014-12-18  Smacky
 
 	* Make line deletion in replace_text work.
